--- a/templates/supplier/homepage.html.twig
+++ b/templates/supplier/homepage.html.twig
@@ -1,3 +1,7 @@
+{% extends 'base.html.twig' %}
+
+{% block body %}
+
 <h1>{{ title }}</h1>
 {# COMMENT #}
 <div>
@@ -10,3 +14,5 @@
         {% endfor %}
     </ul>
 </div>
+
+{% endblock %}
