--- a/templates/provider/list.html.twig
+++ b/templates/provider/list.html.twig
@@ -4,6 +4,13 @@
     <div class="row">
         <div class="col-lg-8 align-center">
             <h1>{{ title }}</h1>
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="flash-{{ label }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
             <table class="table table-striped">
                 <thead class="thead-dark">
 
@@ -34,6 +41,12 @@
                 </tbody>
             </table>
 
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-8  align-center">
+            <a href="{{ path('app_create_provider') }}" class="btn btn-primary">{{ btn_create }}</a>
         </div>
     </div>
 
